<resources>
    <string name="app_name">CalculatorInKotlin</string>
    <string name="cal_hint">Enter the Number</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_m">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_d">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_p">+</string>
    <string name="btn_0">0</string>
    <string name="btn_C">C</string>
    <string name="btn_n">.</string>
    <string name="btn_e">=</string>
    <string name="btn_text_Style">bold</string>
</resources>