<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cal_display"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cal_border"
        android:hint="@string/cal_hint"
        android:inputType="number"
        android:padding="@dimen/cal_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_1"
                style="@style/btn_style"
                android:text="@string/btn_1"
                android:onClick="clickme"/>

            <Button
                android:onClick="clickme"
                android:id="@+id/btn_2"
                style="@style/btn_style"
                android:text="@string/btn_2" />

            <Button
                android:onClick="clickme"
                android:id="@+id/btn_3"
                style="@style/btn_style"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btn_m"
                style="@style/btn_style"
                android:text="@string/btn_m"
                android:onClick="clickme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button

                android:id="@+id/btn_4"
                android:onClick="clickme"
                style="@style/btn_style"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn_5"
                android:onClick="clickme"
                style="@style/btn_style"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn_6"
                android:onClick="clickme"
                style="@style/btn_style"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btn_d"
                android:onClick="clickme"
                style="@style/btn_style"
                android:text="@string/btn_d" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_7"
                style="@style/btn_style"
                android:text="@string/btn_7"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_8"
                style="@style/btn_style"
                android:text="@string/btn_8"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_9"
                style="@style/btn_style"
                android:text="@string/btn_9"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_p"
                style="@style/btn_style"
                android:text="@string/btn_p"
                android:onClick="clickme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_z"
                style="@style/btn_style"
                android:text="@string/btn_0"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_C"
                style="@style/btn_style"
                android:text="@string/btn_C"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_n"
                style="@style/btn_style"
                android:text="@string/btn_n"
                android:onClick="clickme"/>

            <Button
                android:id="@+id/btn_e"
                style="@style/btn_style"
                android:text="@string/btn_e"
                android:onClick="clickme"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>